2012-11-18  Ilya Tikhonovsky  <loislo@chromium.org>

        webaudio: clean-up. Replace AudioContext::m_document member with ContextDestructionObserver::scriptExecutionContext().
        https://bugs.webkit.org/show_bug.cgi?id=102649

        Reviewed by Adam Barth.

        AudioContext uses m_document only as a pointer to ScriptExecutionContext.
        It could be safely replaced with ContextDestructionObserver::m_scriptExecutionContext.
        The lifetime of m_scriptExecutionContext is slightly different but it could be adjusted by m_isStopScheduled flag.

        No new tests as there is no new functionality.

        * Modules/webaudio/AudioBufferSourceNode.cpp:
        (WebCore::AudioBufferSourceNode::looping):
        (WebCore::AudioBufferSourceNode::setLooping):
        * Modules/webaudio/AudioContext.cpp:
        (WebCore::AudioContext::AudioContext):
        (WebCore::AudioContext::stop):
        (WebCore::AudioContext::fireCompletionEvent):
        (WebCore::AudioContext::reportMemoryUsage):
        * Modules/webaudio/AudioContext.h:
        (WebCore::AudioContext::scriptExecutionContext):
        (AudioContext):
        * Modules/webaudio/ScriptProcessorNode.cpp:
        (WebCore::ScriptProcessorNode::fireProcessEvent):
        (WebCore::ScriptProcessorNode::scriptExecutionContext):

2012-11-18  Kentaro Hara  <haraken@chromium.org>

        [V8] Remove unused variables from CodeGeneratorV8.pm
        https://bugs.webkit.org/show_bug.cgi?id=102648

        Reviewed by Adam Barth.

        No tests. No change in generated code.

        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateInterface):
        (GenerateHeader):
        (GetInternalFields):
        (GenerateNormalAttrGetter):
        (GenerateSingleBatchedAttribute):
        (GenerateImplementationCustomCall):
        (GenerateFunctionCallString):
        (CreateCustomSignature):
        (GetContextEnableFunction):

2012-11-18  Kentaro Hara  <haraken@chromium.org>
